UI- id changefor html input

--- a/edha-frontend/customers.html
+++ b/edha-frontend/customers.html
@@ -119,7 +119,7 @@
           </div>
           
           <div class="col-lg-6">
-            <input type="text" class="form-control" id="contactNum" ng-model="modalData.phoneNumber2" placeholder="Contact 2">
+            <input type="text" class="form-control" id="contactNum2" ng-model="modalData.phoneNumber2" placeholder="Contact 2">
           </div></div>
           <div class="row">
 
