--- a/edha-frontend/index.html
+++ b/edha-frontend/index.html
@@ -31,6 +31,7 @@
 <link href="./css/bootstrap-select.min.css" rel="stylesheet">
 <link href="./css/bootstrap.css" rel="stylesheet">
 <link href="./css/edhaCss.css" rel="stylesheet">
+<link href="./css/edhaLoadingGif.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,7 +53,7 @@
           </div>
           <div class="collapse navbar-collapse" id="navbarEdha">
             <ul class="nav navbar-nav navbar-right">
-              <li><a ng-show="authenticated" href="#dashboard">Dashboard</a></li>
+              <!--<li><a ng-show="authenticated" href="#dashboard">Dashboard</a></li>-->
               <li><a ng-show="authenticated" href="#products">Products</a></li>
               <li><a ng-show="authenticated" href="#customers">Customers</a></li>
               <li><a ng-show="authenticated" href="#orders">Orders</a></li>
@@ -71,6 +72,8 @@
     </div>
   </div>
 </nav>
+
+<div class="edha-loading" class="ng-hide" ng-show="isLoading">Loading&#8230;</div>
 
 <div class="container" style="padding-top:5%">
   <ng-view></ng-view>
