--- a/edha-frontend/customers.html
+++ b/edha-frontend/customers.html
@@ -18,6 +18,7 @@
 					<th>Incharge</th>
 					<th>Contact 1</th>
 					<th>Contact 2</th>
+          <th>Email Id</th>
 				</tr>
 				<tr class="filters"><form>
           <th></th>
@@ -34,6 +35,7 @@
 					<td>{{c.incharge.fullName}}</td>
 					<td>{{c.phoneNumber1}}</td>
 					<td>{{c.phoneNumber2}}</td>
+          <td>{{c.emailId}}</td>
 				</tr>
 				<tr>
 					<td colspan="12" class="hiddenRow" style="padding-top:0;padding-bottom:0;text-align:center"><div class="accordian-body collapse" id="demo{{c.id}}"> 
@@ -76,9 +78,16 @@
       <div class="modal-body">
         
           <div class="form-group">
+           <div class="row">
+          <div class="col-lg-6">
             <label for="CustomerName" class="col-form-label">Name</label>
             <input type="text" class="form-control" id="productName" ng-value="modalData.customerName" ng-model="modalData.customerName" placeholder="Customer name">
           </div>
+          <div class="col-lg-6">
+          <label for="email" class="col-form-label">EmailId</label>
+            <input type="text" class="form-control" id="street" ng-model="modalData.emailId" required placeholder="Street">
+          </div></div>
+
           <div class="form-group">
             <label for="CustomerAddresss" class="col-form-label">Address</label>
                      
