--- a/edha-frontend/profile.html
+++ b/edha-frontend/profile.html
@@ -312,8 +312,8 @@
         </div><!--/col-9-->
       </div><!--/row-->
 
-      <div html-subtitute template-path="user_input_form.html"></div>
-      <div html-subtitute template-path="expense_input_form.html"></div>
+      <div ng-include="'user_input_form.html'"></div>
+      <div ng-include="'expense_input_form.html'"></div>
 
 
          
