--- a/edha-frontend/users.html
+++ b/edha-frontend/users.html
@@ -20,6 +20,6 @@
     </table>
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#userModal" ng-click="modalData={}"> Add New User</button>
 
-  <div html-subtitute template-path="user_input_form.html"></div>
+  <div ng-include="'user_input_form.html'"></div>
 </div>
 </div>
