--- a/edha-frontend/customers.html
+++ b/edha-frontend/customers.html
@@ -85,7 +85,7 @@
           </div>
           <div class="col-lg-6">
           <label for="email" class="col-form-label">EmailId</label>
-            <input type="text" class="form-control" id="street" ng-model="modalData.emailId" required placeholder="Street">
+            <input type="text" class="form-control" id="email" ng-model="modalData.emailId" required placeholder="Street">
           </div></div>
 
           <div class="form-group">
