--- a/edha-frontend/customers.html
+++ b/edha-frontend/customers.html
@@ -81,11 +81,11 @@
            <div class="row">
           <div class="col-lg-6">
             <label for="CustomerName" class="col-form-label">Name</label>
-            <input type="text" class="form-control" id="productName" ng-value="modalData.customerName" ng-model="modalData.customerName" placeholder="Customer name">
+            <input type="text" class="form-control" id="customername" ng-value="modalData.customerName" ng-model="modalData.customerName" placeholder="Customer name">
           </div>
           <div class="col-lg-6">
-          <label for="email" class="col-form-label">EmailId</label>
-            <input type="text" class="form-control" id="email" ng-model="modalData.emailId" required placeholder="Street">
+          <label for="email" class="col-form-label">Email Id</label>
+            <input type="text" class="form-control" id="email" ng-model="modalData.emailId" required placeholder="Email Id">
           </div></div>
 
           <div class="form-group">
