--- a/edha-frontend/user_input_form.html
+++ b/edha-frontend/user_input_form.html
@@ -27,6 +27,18 @@
               <span class="text-success" ng-show="modalData.usernameError != undefined && !modalData.usernameError">Username Valid,Please proceed!</span>
             </div></div>
 
+             <div class="row">
+            <div class="col-md-6">
+              <label for="fathersName" class="col-form-label">Father/Husband Name</label>
+              <input type="text" class="form-control col-md-4" id="fathersName" ng-value="modalData.fathersName" ng-model="modalData.fathersName" placeholder="Father/Husband Name">
+            </div>
+            <div class="col-md-6">
+
+              <label for="pan" class="col-form-label">Username</label>
+              <div class="row"><div class="col-md-8">
+                <input type="text" class="form-control" placeholder="PAN" ng-model="modalData.pan" ng-value="modalData.pan"></div><div class="col-md-4">
+            </div></div></div></div>
+
             <div class="form-group">
               <label for="CustomerAddresss" class="col-form-label">Address</label>
 
@@ -74,7 +86,7 @@
                     <div class="row">
                       <div class="col-lg-6">
                         <label for="Role" class="col-form-label">Role :</label>
-                        <spam ng-show="userrole=='SALESMAN'">Salesman</span>
+                        <span ng-show="userrole=='SALESMAN'">Salesman</span>
                         <input ng-if="userrole!='SALESMAN'" type="radio" ng-model="modalData.role" value="ADMIN" ><span ng-if="userrole!='SALESMAN'"> admin</span>
                         <input ng-if="userrole!='SALESMAN'" type="radio" ng-model="modalData.role" value="SALESMAN"><span ng-if="userrole!='SALESMAN'"> salesman</span>
                       </div>
