--- a/edha-frontend/products.html
+++ b/edha-frontend/products.html
@@ -55,7 +55,7 @@
          
           <div class="col-lg-4" ng-show="modalData.isEdit">
           <label for="ProductId" class="col-form-label">ID</label>
-            <input type="text" class="form-control" id="productName" ng-value="modalData.id" ng-model="modalData.id" ng-disabled="modalData.isEdit">
+            <input type="text" class="form-control" id="productId" ng-value="modalData.id" ng-model="modalData.id" ng-disabled="modalData.isEdit">
           </div> </div>
           <div class="form-group">
             <label for="ProductDescription" class="col-form-label">Description</label>
