--- a/edha-frontend/orders.html
+++ b/edha-frontend/orders.html
@@ -13,7 +13,9 @@
   </select></div>
   <div class="form-group col-md-4">
   <label>Discount(%)</label>
-<input type="number" class="form-control right" ng-model="discountOffered" min="0"></div>
+<!--<input type="number" class="form-control right" ng-model="discountOffered" min="0">-->
+<select class="form-control right" ng-model="discountOffered" ng-options="discount.value as discount.name for discount in discountTypes"></select>
+</div>
   <hr/>
   <div class="form-group col-md-8">
   <label>Product: </label>
@@ -50,10 +52,11 @@
         
    <div class="clearfix"></div>
       </div>
+      <label>Payment details(If any)</label>
       <div class="row">
-    
-    <div class="form-group col-md-6">
-  <label>Amount</label>
+
+<div class="form-group col-md-6">
+<label>Amount</label>
 <input type="number" class="form-control right" ng-model="payment.amount" min="0"></div>
      <div class="form-group col-md-6">
        <label>Payment mode</label> <select class="form-control" ng-model="payment.mode">
@@ -78,7 +81,7 @@
   <div class="panel panel-info">
     <div class="panel-heading clearfix">
       <h3 class="panel-title pull-left" style="padding-top: 0.5%;"><b>Orders</b></h3>
-      <div class="pull-right" style="padding-left:1%"><button class="btn btn-primary btn-md" href="#newOrder" id="openBtn" data-toggle="modal" ng-click="getProductsList();getCustomerList();newOrder ={};customerForOrder ='';discountOffered='';productQtyInOrder='';productInOrder={};payment= {};"">New order</button></div>
+      <div class="pull-right" style="padding-left:1%"><button class="btn btn-primary btn-md" href="#newOrder" id="openBtn" data-toggle="modal" ng-click="getProductsList();getCustomerList();getDiscountTypes();newOrder ={};customerForOrder ='';discountOffered='';productQtyInOrder='';productInOrder={};payment= {};"">New order</button></div>
       <div class="btn-group pull-right">
         <button class="btn btn-default btn-sm" ng-click="getOrdersByStatus('NEW')">New</button>
         <button class="btn btn-default btn-sm" ng-click="getOrdersByStatus('APPROVED')">Approved</button> 
